k8s/apps/proxmox/endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox-external
  namespace: proxmox
  labels:
    kubernetes.io/service-name: proxmox-external
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.2
ports:
  - port: 8006
    protocol: TCP
