k8s/apps/proxmox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: proxmox
spec:
  ports:
    - port: 8006
      targetPort: 8006
      protocol: TCP
